--- a/src/app/clinics-dashboard/clinics-dashboard.component.html
+++ b/src/app/clinics-dashboard/clinics-dashboard.component.html
@@ -258,7 +258,7 @@
                     <hr>
                     <div class="row">
                         <div class="col">
-                            <h3>שם היחידה המטפלת: </h3>
+                            <h3>שם המחלקה המטפלת: </h3>
                         </div>
                         <div class="col">
                             <h2><b>{{
@@ -269,7 +269,7 @@
                     <hr>
                     <div class="row">
                         <div class="col">
-                            <h3>מנהלת היחידה: </h3>
+                            <h3>מנהל המחלקה: </h3>
                         </div>
                         <div class="col">
                             <h2><b>{{
