--- a/src/app/galit-points-report/galit-points-report.component.html
+++ b/src/app/galit-points-report/galit-points-report.component.html
@@ -148,10 +148,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> MUST </th>
             <td mat-cell *matCellDef="let element"> {{element.MUST}} </td>
           </ng-container>
-          <!-- <ng-container matColumnDef="STAMP">
+          <ng-container matColumnDef="STAMP">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> STAMP </th>
             <td mat-cell *matCellDef="let element"> {{element.STAMP}} </td>
-          </ng-container> -->
+          </ng-container>
           <ng-container matColumnDef="WieghtLoss">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ירידה במשקל </th>
             <td mat-cell *matCellDef="let element"> {{element.WieghtLoss}} </td>
