--- a/src/app/galit-points-report/galit-points-report.component.html
+++ b/src/app/galit-points-report/galit-points-report.component.html
@@ -1,53 +1,48 @@
 <div class="d-block pd-60">
-  <!-- <div class="row">
-    <div class="col">
-      <div dir="rtl" class="card w-85-p">
-        <div dir="rtl" class="card-body">
-          <form class="form">
-            <div class="row">
-              <div class="col">
-                <div class="form-group">
-                  <mat-form-field>
-                    <label><b>חיפוש</b> - הקלד תעודת
-                      זהות</label>
-                    <input matInput autocomplete="off" [(ngModel)]="caseNumber" name="fliterVal" />
-                  </mat-form-field>
-                </div>
-              </div>
-            </div>
-            <h4 class="searchingPatient" *ngIf="!patientFound"> מחפש נבדק ... </h4>
-            <button type="submit" mat-raised-button color="yello" (click)="getGalitReportPatient()">
-              <mat-icon>search</mat-icon>
-            </button>
-            &nbsp;&nbsp;&nbsp;
-            <button mat-raised-button color="yello" type="button" (click)="clearSearch()">
-              <mat-icon>clear</mat-icon>
-            </button>
-            &nbsp;&nbsp;&nbsp;
-          </form>
-        </div>
-        <mat-progress-bar mode="buffer" *ngIf="!patientFound"></mat-progress-bar>
+  <div class="row mt-5" dir="rtl" [formGroup]="searchForm" style="border-style: outset;width: 90%;margin: auto;">
+    <div class="col-2 text-center" style="margin: auto;">
+      <span class="ml-1">היסטוריה</span>
+      <mat-slide-toggle class="example-margin" color="accent" [(ngModel)]="checked" [ngModelOptions]="{standalone: true}">
+      </mat-slide-toggle>
+    </div>
+    <div class="col-4">
+      <div class="form-group">
+        <mat-form-field appearance="fill">
+          <input matInput formControlName="DateSearch" (focus)="pickersearch1.open()"
+            [matDatepicker]="pickersearch1" placeholder="דוח בתאריך:">
+          <mat-datepicker-toggle matSuffix [for]="pickersearch1">
+          </mat-datepicker-toggle>
+          <mat-datepicker [disabled]="!checked" #pickersearch1></mat-datepicker>
+        </mat-form-field>
       </div>
     </div>
-  </div> -->
-
-  <div class="row mt-5" dir="rtl">
+    <div class="col-6">
+      <mat-form-field class="full-width">
+        <mat-label>מחלקה</mat-label>
+        <mat-select formControlName="DepartmentSearch" (selectionChange)="applyFilter($event.value)">
+          <mat-option value="">
+            הכל
+          </mat-option>
+          <mat-option *ngFor="let dept of departmentsArray" [value]="dept">
+            {{dept}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="row d-block">
+      <h3 class="header float-right">מספר מטופלים: {{numberOfPatients}}</h3>
+      <button matTooltip="רענון" mat-raised-button class="btn btn-raised mr-2"
+        style="background: lawngreen;float: left;" (click)="getGalitReportPatient()">
+        <i class="material-icons">search</i>
+      </button>
+      <button matTooltip="הדפסה" mat-raised-button class="btn btn-raised mr-2"
+        style="background: cornflowerblue;float: left;" (click)="print()">
+        <i class="material-icons">print</i>
+      </button>
+    </div>
+  </div>
+  <div class="row mt-1" dir="rtl">
     <div class="col ml-3" style="overflow: auto;">
-      <div class="row d-block">
-        <h3 class="header float-right">מספר מטופלים: {{numberOfPatients}}</h3>
-        <button matTooltip="רענון" mat-raised-button class="btn btn-raised mr-2" style="background: lawngreen;float: left;"
-          (click)="ngOnInit()">
-          <i class="material-icons">refresh</i>
-        </button>
-        <button matTooltip="הדפסה" mat-raised-button class="btn btn-raised mr-2"
-          style="background: cornflowerblue;float: left;" (click)="print()">
-          <i class="material-icons">print</i>
-        </button>
-        <button matTooltip="שמירת דו'ח" mat-raised-button class="btn btn-raised mr-2" style="background: goldenrod;float: left;"
-          (click)="saveReport()">
-          <i class="material-icons">save</i>
-        </button>
-      </div>
       <mat-form-field appearance="standard" style="box-shadow: -1px -1px 9px 0px #000;text-align: center;">
         <mat-label class="filterClass">מסנן</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="הקלד מסנן" #input>
@@ -80,10 +75,6 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> שם פרטי </th>
             <td mat-cell *matCellDef="let element"> {{element.PatientFirstName}} {{element.PatientLastName}}</td>
           </ng-container>
-          <!-- <ng-container matColumnDef="PatientLastName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> שם משפחה </th>
-            <td mat-cell *matCellDef="let element"> {{element.PatientLastName}} </td>
-          </ng-container> -->
           <ng-container matColumnDef="PM_PATIENT_GENDER">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> מגדר </th>
             <td mat-cell *matCellDef="let element"> {{element.PM_PATIENT_GENDER}} </td>
@@ -98,11 +89,13 @@
           </ng-container>
           <ng-container matColumnDef="ICD9Surgery">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ניתוח </th>
-            <td mat-cell *matCellDef="let element" style="word-wrap: break-word;font-size: 10px;"> {{element.ICD9Surgery}} </td>
+            <td mat-cell *matCellDef="let element" style="word-wrap: break-word;font-size: 10px;">
+              {{element.ICD9Surgery}} </td>
           </ng-container>
           <ng-container matColumnDef="ICD9Anamniza">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> אבחנה </th>
-            <td mat-cell *matCellDef="let element" style="word-wrap: break-word;font-size: 10px;"> {{element.ICD9Anamniza}} </td>
+            <td mat-cell *matCellDef="let element" style="word-wrap: break-word;font-size: 10px;">
+              {{element.ICD9Anamniza}} </td>
           </ng-container>
           <ng-container matColumnDef="DifferenceInStayDays">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> הפרש ימי אשפוז </th>
@@ -174,35 +167,6 @@
         </mat-paginator>
         <mat-progress-bar mode="buffer" *ngIf="!patientFound"></mat-progress-bar>
       </div>
-
-
-      <!-- <mat-list role="list">
-        <mat-list-item role="listitem">DepartName: {{patient.DepartName}}</mat-list-item>
-        <mat-list-item role="listitem">PM_ROOM_NUMBER: {{patient.PM_ROOM_NUMBER}}</mat-list-item>
-        <mat-list-item role="listitem">CaseNumber: {{patient.CaseNumber}}</mat-list-item>
-        <mat-list-item role="listitem">PatientFirstName: {{patient.PatientFirstName}}</mat-list-item>
-        <mat-list-item role="listitem">PatientLastName: {{patient.PatientLastName}}</mat-list-item>
-        <mat-list-item role="listitem">PM_PATIENT_GENDER: {{patient.PM_PATIENT_GENDER}}</mat-list-item>
-        <mat-list-item role="listitem">DatesInHospital: {{patient.DatesInHospital}}</mat-list-item>
-        <mat-list-item role="listitem">AnotherHospital: {{patient.AnotherHospital}}</mat-list-item>
-        <mat-list-item role="listitem">ICD9Surgery: {{patient.ICD9Surgery}}</mat-list-item>
-        <mat-list-item role="listitem">ICD9Anamniza: {{patient.ICD9Anamniza}}</mat-list-item>
-        <mat-list-item role="listitem">DifferenceInStayDays: {{patient.DifferenceInStayDays}}</mat-list-item>
-        <mat-list-item role="listitem">AGE: {{patient.AGE}}</mat-list-item>
-        <mat-list-item role="listitem">Albomin: {{patient.Albomin}}</mat-list-item>
-        <mat-list-item role="listitem">Norton: {{patient.Norton}}</mat-list-item>
-        <mat-list-item role="listitem">ThroughInput: {{patient.ThroughInput}}</mat-list-item>
-        <mat-list-item role="listitem">Iv: {{patient.Iv}}</mat-list-item>
-        <mat-list-item role="listitem">HowToEat: {{patient.HowToEat}}</mat-list-item>
-        <mat-list-item role="listitem">DietType: {{patient.DietType}}</mat-list-item>
-        <mat-list-item role="listitem">TextureFood: {{patient.TextureFood}}</mat-list-item>
-        <mat-list-item role="listitem">Desctiption: {{patient.Desctiption}}</mat-list-item>
-        <mat-list-item role="listitem">BMI: {{patient.BMI}}</mat-list-item>
-        <mat-list-item role="listitem">MUST: {{patient.MUST}}</mat-list-item>
-        <mat-list-item role="listitem">STAMP: {{patient.STAMP}}</mat-list-item>
-        <mat-list-item role="listitem">WieghtLoss: {{patient.WieghtLoss}}</mat-list-item>
-        <mat-list-item role="listitem">Points: {{patient.Points}}</mat-list-item>
-      </mat-list> -->
     </div>
   </div>
 </div>
