--- a/src/app/maternity/maternity.component.html
+++ b/src/app/maternity/maternity.component.html
@@ -57,9 +57,8 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <button mat-raised-button type="submit" class="btn btn-primary btn-raised"
-                                        (click)="getReport($event)">
+                                        (click)="getTableFromServer('','1','')">
                                         חפש
                                     </button>
                                 </form>
@@ -68,33 +67,43 @@
                     </div>
                 </div>
             </div>
+            <button mat-raised-button type="submit" class="btn btn-primary btn-raised" (click)="returnToCards()"
+                style="float: right;margin-right: 1%;">
+                חזרה לראשי
+            </button>
             <br />
             <hr />
-            <div class="container-fluid pb-60">
+            <div class="container-fluid pb-60" style="width: 88%;">
                 <div class="row">
-                    <div dir="rtl" class="col">
+                    <div class="col-4" dir="rtl" *ngFor="let act of MaternityActivityList"
+                        [hidden]="dataSource.filteredData.length > 0">
+                        <mat-card class="card activity" (click)="getTableFromServer('','1',act.Row_ID)">
+                            <span style="font-size: 28px;">{{act.Activity_Name}}</span>
+                        </mat-card>
+                    </div>
+                    <div dir="rtl" class="col" *ngIf="dataSource.filteredData.length > 0">
                         <div class="table-responsive">
                             <div class="table-spinner-container">
                                 <!-- <mat-form-field>
                                         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="חפש">
                                     </mat-form-field> -->
                                 <table class="table" mat-table [dataSource]="dataSource">
-                                    <!-- <ng-container matColumnDef="RowID">
+                                    <ng-container matColumnDef="RowID">
                                         <th mat-header-cell *matHeaderCellDef>
                                             מס' פרויקט
                                         </th>
                                         <td mat-cell *matCellDef="let element">
-                                            {{ element.RowID }}
+                                            {{ element.MaternityNumber }}
                                         </td>
-                                    </ng-container> -->
-                                    <ng-container matColumnDef="MaternityNumber">
+                                    </ng-container>
+                                    <!-- <ng-container matColumnDef="MaternityNumber">
                                         <th mat-header-cell *matHeaderCellDef>
                                             מזהה פרויקט
                                         </th>
                                         <td mat-cell *matCellDef="let element" class="text-center">
                                             {{ element.RowID }}
                                         </td>
-                                    </ng-container>
+                                    </ng-container> -->
                                     <ng-container matColumnDef="MaternityName">
                                         <th mat-header-cell *matHeaderCellDef width="160">
                                             שם פרויקט
@@ -213,7 +222,7 @@
                             </div>
                             <!-- PAGINATION -->
                             <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 20, 50, 100]"
-                                [pageSize]="10" showFirstLastButtons (page)="getPaginatorData($event)"></mat-paginator>
+                                [pageSize]="10" showFirstLastButtons></mat-paginator>
                         </div>
                     </div>
                 </div>
@@ -369,7 +378,7 @@
                 <div class="col">
                     <div class="form-group">
                         <mat-form-field>
-                            <input matInput formControlName="ProjectDate" placeholder="תאריך קורס"
+                            <input matInput formControlName="ProjectDate" placeholder="תאריך קורס/מפגש"
                                 [matDatepicker]="picker" (focus)="picker.open()">
                             <mat-datepicker-toggle matSuffix [for]="picker">
                             </mat-datepicker-toggle>
@@ -413,7 +422,7 @@
                 <div class="col">
                     <div class="form-group">
                         <mat-form-field>
-                            <input matInput formControlName="additionalProjectDate" placeholder="תאריך קורס נוסף"
+                            <input matInput formControlName="additionalProjectDate" placeholder="תאריך קורס/מפגש נוסף"
                                 [matDatepicker]=" picker2" (focus)="picker2.open()">
                             <mat-datepicker-toggle matSuffix [for]="picker2">
                             </mat-datepicker-toggle>
