--- a/src/app/maternitypatients/maternitypatients.component.html
+++ b/src/app/maternitypatients/maternitypatients.component.html
@@ -2,7 +2,12 @@
     <h1 class="text-center">משתתפות {{MaternityName}}</h1>
     <div class="container-fluid">
         <div class="row">
-            <div class="col">
+            <div class="col-1 text-center" style="align-self: center;">
+                <button mat-fab color="accent" aria-label="Excel" (click)="exportToExcel()" matTooltip="יצוא לאקסל">
+                    <mat-icon>get_app</mat-icon>
+                </button>
+            </div>
+            <div class="col-11">
                 <div dir="rtl" class="card w-85-p">
                     <div dir="rtl" class="card-body">
                         <form class="form" ngbAutofocus>
@@ -37,17 +42,20 @@
                     </div>
                 </div>
             </div>
+
+
         </div>
-        <button mat-fab color="accent" aria-label="Excel" (click)="exportToExcel()" matTooltip="יצוא לאקסל">
-            <mat-icon>get_app</mat-icon>
-        </button>
+
     </div>
-    <br />
     <hr />
     <div class="container-fluid pb-60">
         <div class="row">
             <div dir="rtl" class="col">
                 <div class="table-responsive">
+                    <mat-form-field appearance="standard" style="text-align: center;">
+                        <mat-label class="filterClass">מסנן</mat-label>
+                        <input matInput (keyup)="applyFilter($event)" #input>
+                    </mat-form-field>
                     <div class="table-spinner-container">
                         <!-- <mat-form-field>
                                 <input matInput (keyup)="applyFiltermaternitypatients($event.target.value)" placeholder="חפש">
@@ -183,10 +191,10 @@
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
                         </table>
+                        <mat-paginator [pageSizeOptions]="[5, 10, 20, 50, 100]"></mat-paginator>
                     </div>
                     <!-- PAGINATION -->
-                    <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 20, 50, 100]" [pageSize]="10"
-                        showFirstLastButtons (page)="getPaginatorData($event)"></mat-paginator>
+
                 </div>
             </div>
         </div>
