--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@
 /* .drugprotocols .mat-form-field-appearance-legacy .mat-form-field-infix{
     padding: 0 !important;
 } */
+.mt-3{
+    margin-top: 1rem!important;
+}
 .drugprotocols .mat-form-field-appearance-legacy .mat-form-field-wrapper{
     padding: 0 !important;
 }
