--- a/src/app/new-born/new-born.component.html
+++ b/src/app/new-born/new-born.component.html
@@ -201,6 +201,7 @@
 </div>
 <button
     type="button"
+    #newBornBtn
     id="rolesDetailsBtn"
     (click)="open(patientDetailsModal, 'rolesDetails', '')"
     mat-fab
