--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -195,6 +195,12 @@
         </div>
         <div class="col-4">
             <h6><b>{{gender}} {{dob}}</b></h6>
+            <button matTooltip="ילוד חדש" class="btn btn-primary btn-raised" id="BtnStyleNewBorn"
+                type="submit" mat-raised-button>
+                <span class="material-icons">
+                    face_retouching_natural
+                </span>
+            </button>
         </div>
     </div>
     <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
@@ -440,7 +446,8 @@
                             </span>
                         </button>
                         <button matTooltip="שמור והמשך דיווח" class="btn btn-primary btn-raised ml-3 float-left"
-                            id="BtnStyle" (click)="onSubmit('1')" type="submit" [disabled]="waitToSaveBtn" mat-raised-button>
+                            id="BtnStyle" (click)="onSubmit('1')" type="submit" [disabled]="waitToSaveBtn"
+                            mat-raised-button>
                             <span class="material-icons">
                                 save
                             </span>
