--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -196,7 +196,7 @@
         <div class="col-4">
             <h6><b>{{gender}} {{dob}}</b></h6>
             <button matTooltip="ילוד חדש" class="btn btn-primary btn-raised" id="BtnStyleNewBorn"
-                type="submit" mat-raised-button>
+                (click)="openNewBornLink()" type="submit" mat-raised-button>
                 <span class="material-icons">
                     face_retouching_natural
                 </span>
