--- a/src/app/galit-points-report/galit-points-report.component.html
+++ b/src/app/galit-points-report/galit-points-report.component.html
@@ -19,13 +19,14 @@
     <div class="col-6">
       <mat-form-field class="full-width">
         <mat-label>מחלקה</mat-label>
-        <mat-select formControlName="DepartmentSearch" (selectionChange)="applyFilter($event.value)">
-          <mat-option value="">
+        <mat-select (selectionChange)="applyFilter2($event.value)">
+          <!-- <mat-option value="">
             הכל
-          </mat-option>
-          <mat-option *ngFor="let dept of departmentsArray" [value]="dept">
+          </mat-option> -->
+          <input type="checkbox" [checked]="dept.check" *ngFor="let dept of departmentsArray"/>
+          <!-- <mat-option *ngFor="let dept of departmentsArray" [value]="dept">
             {{dept}}
-          </mat-option>
+          </mat-option> -->
         </mat-select>
       </mat-form-field>
     </div>
@@ -83,10 +84,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ימי אשפוז </th>
             <td mat-cell *matCellDef="let element"> {{element.DatesInHospital}} </td>
           </ng-container>
-          <ng-container matColumnDef="AnotherHospital">
+          <!-- <ng-container matColumnDef="AnotherHospital">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> בי"ח אחר </th>
             <td mat-cell *matCellDef="let element"> {{element.AnotherHospital}} </td>
-          </ng-container>
+          </ng-container> -->
           <ng-container matColumnDef="ICD9Surgery">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ניתוח </th>
             <td mat-cell *matCellDef="let element" style="word-wrap: break-word;font-size: 10px;">
@@ -122,7 +123,7 @@
             <td mat-cell *matCellDef="let element"> {{element.Iv}} </td>
           </ng-container> -->
           <ng-container matColumnDef="HowToEat">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> אופן אכילה</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> זקוק לעזרה בהאכלה</th>
             <td mat-cell *matCellDef="let element"> {{element.HowToEat}} </td>
           </ng-container>
           <ng-container matColumnDef="DietType">
@@ -138,17 +139,17 @@
             <td mat-cell *matCellDef="let element"> {{element.Desctiption}} </td>
           </ng-container>
           <ng-container matColumnDef="BMI">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> BMI </th>
-            <td mat-cell *matCellDef="let element"> {{element.BMI}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> BMI/W/H </th>
+            <td mat-cell *matCellDef="let element"> {{element.BMI}}</td>
           </ng-container>
           <ng-container matColumnDef="MUST">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> MUST </th>
-            <td mat-cell *matCellDef="let element"> {{element.MUST}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> MUST/STAMP </th>
+            <td mat-cell *matCellDef="let element"> {{element.MUST}} - {{element.STAMP}}</td>
           </ng-container>
-          <ng-container matColumnDef="STAMP">
+          <!-- <ng-container matColumnDef="STAMP">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> STAMP </th>
             <td mat-cell *matCellDef="let element"> {{element.STAMP}} </td>
-          </ng-container>
+          </ng-container> -->
           <ng-container matColumnDef="WieghtLoss">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ירידה במשקל </th>
             <td mat-cell *matCellDef="let element"> {{element.WieghtLoss}} </td>
