--- a/src/app/form-dashboard/cpr-form/cpr-form.component.html
+++ b/src/app/form-dashboard/cpr-form/cpr-form.component.html
@@ -1,3 +1,6 @@
+<div id="loader_2" class="d-none">
+    <mat-spinner value="50" diameter="30"></mat-spinner>
+</div>
 <div class="firstWrapper">
     <div class="header">
         <button mat-raised-button ml-2 type="submit" (click)="returnToSearch()" *ngIf="searching == 'Found'"
