--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,18 @@
 .drugprotocols .mat-form-field-appearance-legacy .mat-form-field-wrapper{
     padding: 0 !important;
 }
+.ngx-barcode{
+    /*transform: scale(0.6);*/
+}
+body .table-data ,
+body .table-data * {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-weight: 600  !important;
+}
+.mb-5{
+    margin-bottom: 5px;
+}
 .mat-select-panel  {
     padding-top: 30px !important;
 }
