--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.html
@@ -38,15 +38,15 @@
                 </option>
             </select>
         </div>
-        <div *ngIf="departParam == '1'" class="col-lg-4 col-md-4 col-sm-4 col-xs-4" [formGroup]="surgeryDeptTypeGroup"
+        <!-- <div *ngIf="departParam == '1'" class="col-lg-4 col-md-4 col-sm-4 col-xs-4" [formGroup]="surgeryDeptTypeGroup"
             style="text-align-last: center;">
-            <!-- <mat-radio-group formControlName="surgeryDeptType" aria-label="Select an option"
+            <mat-radio-group formControlName="surgeryDeptType" aria-label="Select an option"
                 (change)="changeSurgeryType()">
                 <mat-radio-button value="0">הכל</mat-radio-button>
                 <mat-radio-button value="1">ח.נ כללי</mat-radio-button>
                 <mat-radio-button value="2">חדרי ניתוח</mat-radio-button>
-            </mat-radio-group> -->
-        </div>
+            </mat-radio-group>
+        </div> -->
         <div *ngIf="departParam == '5' || departParam == '6'"
             class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align-last: center;"
             [formGroup]="hospitalDepartTypeGroup">
@@ -65,6 +65,20 @@
             <section class="example-section">
                 <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="deliveryPremature">
                     פגיה</mat-checkbox>
+            </section>
+        </div>
+        <div *ngIf="departParam == '3'" class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align-last: center;"
+            [formGroup]="deliveryPrematureGroup">
+            <section class="example-section">
+                <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="deliveryPremature">
+                    מחלקות מזמינות</mat-checkbox>
+            </section>
+        </div>
+        <div *ngIf="departParam == '1'" class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="text-align-last: center;"
+            [formGroup]="deliveryPrematureGroup">
+            <section class="example-section">
+                <mat-checkbox class="example-margin" (change)="changeSurgeryType()" formControlName="deliveryPremature">
+                    לפי אתרים</mat-checkbox>
             </section>
         </div>
     </div>
